# math-compute-platform

./: README.md  docker-compose.yml
api/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile
api/migrations/: 20260620142000_create_jobs_table.sql
api/src/: api_error.rs  app_state.rs  health.rs  jobs.rs  lib.rs  main.rs  metrics.rs  queue.rs  router.rs  runner.rs  tasks.rs  worker.rs
api/src/health/: health_tests.rs
api/src/jobs/: job_endpoints.rs  job_endpoints_tests.rs  job_repository.rs  job_repository_tests.rs  job_types.rs  jobs.rs  mod.rs
api/src/metrics/: metrics_endpoints.rs  metrics_endpoints_tests.rs  metrics_repository.rs  metrics_types.rs
api/src/queue/: active_job_queue.rs  job_queue.rs  postgres_job_queue.rs  queue_config.rs  queue_config_tests.rs  sqs_job_queue.rs
api/src/runner/: job_runner.rs  job_runner_tests.rs
api/src/tasks/: monte_carlo.rs  monte_carlo_tests.rs
api/src/worker/: worker_loop.rs  worker_loop_tests.rs
