[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
aws-config = "1"
aws-sdk-sqs = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
uuid = { version = "1", features = ["serde", "v4"] }
rand = "0.10.1"
